Add Box2D submodule. Partially implement Physics2D system. Stub out physics example

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "lib/plf_colony"]
 	path = lib/plf_colony
 	url = git@github.com:mattreecebentley/plf_colony.git
+[submodule "lib/box2d"]
+	path = lib/box2d
+	url = git@github.com:erincatto/box2d.git
