--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,5 +5,6 @@ add_subdirectory(GUI)
 add_subdirectory(Logging)
 add_subdirectory(Menu)
 add_subdirectory(Particles)
+add_subdirectory(Physics2D)
 add_subdirectory(Renderer)
 add_subdirectory(Resources)
