--- a/src/Systems/CMakeLists.txt
+++ b/src/Systems/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PRIVATE
 	Animation2DSystem.cpp
 	MarkedForDeath.cpp
 	OverlayScalerSystem.cpp
+	Physics2D.cpp
 	RendererUpdateSystem.cpp
 	RenderSystem.cpp
 	TogglerSystem.cpp
