Implement some variadic template helpers

--- a/tests/Util/CMakeLists.txt
+++ b/tests/Util/CMakeLists.txt
@@ -5,5 +5,6 @@ target_sources(BLIB.t PUBLIC
     RangeAllocatorUnbounded.t.cpp
     Signal.t.cpp
     ThreadPool.t.cpp
+    VariadicHelpers.t.cpp
     Waiter.t.cpp
 )
