Add stub files for materials. Make PipelineParameters copy-able and store in Pipeline. Allow pipelines to be dynamically created from parameters

--- a/include/BLIB/Components/CMakeLists.txt
+++ b/include/BLIB/Components/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(BLIB PUBLIC
 	BatchedSprites.hpp
 	Hitbox2D.hpp
 	MarkedForDeath.hpp
+	MaterialInstance.hpp
 	Mesh.hpp
 	Orientation3D.hpp
 	OverlayScaler.hpp
