--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(Descriptors)
 add_subdirectory(Events)
 add_subdirectory(Graph)
 add_subdirectory(Lighting)
+add_subdirectory(Materials)
 add_subdirectory(Primitives)
 add_subdirectory(Resources)
 add_subdirectory(Scenes)
