--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(Descriptors)
 add_subdirectory(Graph)
 add_subdirectory(Lighting)
 add_subdirectory(Overlays)
+add_subdirectory(Materials)
 add_subdirectory(Primitives)
 add_subdirectory(Resources)
 add_subdirectory(Scenes)
