Move RefPool to Containers module. Add RefPoolDirect. Implement Material and MaterialPool

--- a/include/BLIB/Render/Resources/CMakeLists.txt
+++ b/include/BLIB/Render/Resources/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(BLIB PUBLIC
     BindlessTextureArray.hpp
-    Material.hpp
+    MaterialPipelineCache.hpp
     MaterialPool.hpp
     PipelineCache.hpp
     PipelineLayoutCache.hpp
