--- a/include/BLIB/Containers/CMakeLists.txt
+++ b/include/BLIB/Containers/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(BLIB PUBLIC
     FastEraseVector.hpp
     ObjectPool.hpp
     QuadTree.hpp
+    RefPool.hpp
     StaticRingBuffer.hpp
     StaticVector.hpp
     Grid.hpp
