Add Cube drawable and begin 3d graphics example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(Audio)
 add_subdirectory(Engine)
 add_subdirectory(Graphics)
+add_subdirectory(Graphics3D)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
 add_subdirectory(Menu)
