--- a/include/BLIB/Render/Resources/CMakeLists.txt
+++ b/include/BLIB/Render/Resources/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PUBLIC
     BindlessTextureArray.hpp
+    GlobalDescriptors.hpp
     MaterialPipelineCache.hpp
     MaterialPool.hpp
     PipelineCache.hpp
