--- a/src/Render/Descriptors/Builtin/CMakeLists.txt
+++ b/src/Render/Descriptors/Builtin/CMakeLists.txt
@@ -1,11 +1,11 @@
 target_sources(BLIB PRIVATE
 	FadeEffectFactory.cpp
+	GlobalDataFactory.cpp
+	GlobalDataInstance.cpp
 	Scene2DFactory.cpp
 	Scene2DInstance.cpp
 	Scene3DFactory.cpp
 	Scene3DInstance.cpp
 	SlideshowFactory.cpp
 	SlideshowInstance.cpp
-	TexturePoolFactory.cpp
-	TexturePoolInstance.cpp
 )
