Expand and implement material pool

--- a/include/BLIB/Render/Resources/CMakeLists.txt
+++ b/include/BLIB/Render/Resources/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PUBLIC
     GlobalDescriptors.hpp
     MaterialPipelineCache.hpp
     MaterialPool.hpp
+    MaterialRef.hpp
     PipelineCache.hpp
     PipelineLayoutCache.hpp
     RenderPassCache.hpp
