Update descriptors & shaders to use material pool

--- a/include/BLIB/Render/Materials/CMakeLists.txt
+++ b/include/BLIB/Render/Materials/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
     Material.hpp
     MaterialDescriptor.hpp
+    MaterialId.hpp
     MaterialPipeline.hpp
     MaterialPipelineSettings.hpp
 )
