Add light info to 3d scene descriptor set. Fix buffer alignment issues everywhere. Add dependency support to shader compiler

--- a/include/BLIB/Render/Lighting/CMakeLists.txt
+++ b/include/BLIB/Render/Lighting/CMakeLists.txt
@@ -1,4 +1,11 @@
 target_sources(BLIB PUBLIC
+    Attenuation.hpp
+    Color3D.hpp
+    LightingDescriptor3D.hpp
     Light2D.hpp
+    PointLight3D.hpp
     Scene2DLighting.hpp
+    Scene3DLighting.hpp
+    SpotLight3D.hpp
+    SunLight3D.hpp
 )
