Add light method to 3d shaders. Move AlignedBuffer to Buffers module. Add Alignment helper

--- a/include/BLIB/Render/Buffers/CMakeLists.txt
+++ b/include/BLIB/Render/Buffers/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(BLIB PUBLIC
+    AlignedBuffer.hpp
+    Alignment.hpp
 	BatchIndexBuffer.hpp
 	DynamicSSBO.hpp
 	FullyDynamicSSBO.hpp
