Use quaternions for transform3d rotation. Implement Cone drawable

--- a/include/BLIB/Graphics/CMakeLists.txt
+++ b/include/BLIB/Graphics/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(BLIB PUBLIC
 	BatchSpriteSimple.hpp
 	BatchTriangle.hpp
 	Circle.hpp
+	Cone.hpp
 	Drawable.hpp
 	Dummy2D.hpp
 	Icon.hpp
