--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(Input)
 add_subdirectory(Interfaces)
 add_subdirectory(Logging)
 add_subdirectory(Math)
+add_subdirectory(Models)
 add_subdirectory(Parser)
 add_subdirectory(Particles)
 add_subdirectory(Render)
