Implement skybox and fix some issues with cubemaps

--- a/src/Render/Shaders/CMakeLists.txt
+++ b/src/Render/Shaders/CMakeLists.txt
@@ -16,6 +16,9 @@ compile_shaders(
 
     3D/meshSkinned.vert
 
+    3D/skybox.vert
+    3D/skybox.frag
+
     2D/skinned2d.vert
     2D/skinned2d.frag
     2D/skinned2dlit.frag
