Make render graph scene aware. Add generic color attachment descriptor instance. Refactory fade effect task. Add 3d postfx task. Implement PipelineInstance helper

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -11,6 +11,7 @@ target_sources(BLIB PUBLIC
     PerFrame.hpp
     PerSwapFrame.hpp
     Pipeline.hpp
+    PipelineInstance.hpp
     PipelineLayout.hpp
     PipelineParameters.hpp
     RenderPass.hpp
