Fix resize issue with color attachment set. Add helper buffer and assets for generic attachment buffers

--- a/include/BLIB/Render/Graph/Assets/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Assets/CMakeLists.txt
@@ -2,6 +2,8 @@ target_sources(BLIB PUBLIC
 	FinalRenderTextureAsset.hpp
 	FinalSwapframeAsset.hpp
 	FramebufferAsset.hpp
+	GenericTargetAsset.hpp
 	SceneAsset.hpp
 	StandardTargetAsset.hpp
+	TargetSize.hpp
 )
