Implement MultiAsset helper in render graph for multiples of a created asset

--- a/include/BLIB/Render/Graph/Providers/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Providers/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(BLIB PUBLIC
+	BloomProviders.hpp
 	GenericTargetProvider.hpp
+	MultiAssetProvider.hpp
 	StandardTargetProvider.hpp
 )
