Implement bloom. Refactor places for bloom. Fix some render graph bugs

--- a/src/Render/Shaders/CMakeLists.txt
+++ b/src/Render/Shaders/CMakeLists.txt
@@ -33,4 +33,6 @@ compile_shaders(
 
     PostFX/fadeEffect.frag
     PostFX/3dPostProcess.frag
+    PostFX/bloomBlur.frag
+    PostFX/bloomHighlightFilter.frag
 )
