--- a/include/BLIB/Render/Graph/Providers/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Providers/CMakeLists.txt
@@ -2,5 +2,5 @@ target_sources(BLIB PUBLIC
 	BloomProviders.hpp
 	GenericTargetProvider.hpp
 	MultiAssetProvider.hpp
-	StandardTargetProvider.hpp
+	SimpleAssetProvider.hpp
 )
