Move render graph strategies into scenes and make one per scene type

--- a/include/BLIB/Render/Graph/Strategies/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Strategies/CMakeLists.txt
@@ -1,3 +1,5 @@
 target_sources(BLIB PUBLIC
-	ForwardRenderStrategy.hpp
+	OverlayRenderStrategy.hpp
+	Scene2DRenderStrategy.hpp
+	Scene3DForwardRenderStrategy.hpp
 )
