Stub out shadow map task and asset

--- a/src/Render/Graph/Tasks/CMakeLists.txt
+++ b/src/Render/Graph/Tasks/CMakeLists.txt
@@ -5,4 +5,5 @@ target_sources(BLIB PRIVATE
 	ForwardRenderTransparentTask.cpp
 	PostProcess3DTask.cpp
 	RenderOverlayTask.cpp
+	ShadowMapTask.cpp
 )
