--- a/include/BLIB/Render/Graph/Assets/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Assets/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(BLIB PUBLIC
 	GenericTargetAsset.hpp
 	RenderPassBehavior.hpp
 	SceneAsset.hpp
+	ShadowMapAsset.hpp
 	StandardTargetAsset.hpp
 	TargetSize.hpp
 )
