--- a/src/Render/Shaders/CMakeLists.txt
+++ b/src/Render/Shaders/CMakeLists.txt
@@ -19,6 +19,10 @@ compile_shaders(
     3D/skybox.vert
     3D/skybox.frag
 
+    3D/shadowMap.vert
+    3D/pointShadowMap.vert
+    3D/pointShadowMap.geom
+
     2D/skinned2d.vert
     2D/skinned2d.frag
     2D/skinned2dlit.frag
