--- a/include/BLIB/Render/Scenes/CMakeLists.txt
+++ b/include/BLIB/Render/Scenes/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
     BatchedScene.hpp
     CodeScene.hpp
     CodeSceneObject.hpp
+    ExtraContexts.hpp
     Key.hpp
     Scene.hpp
     SceneObject.hpp
