WIP: Refactoring lighting to work better with shadow mapping. Some rendering errors

--- a/include/BLIB/Render/Lighting/CMakeLists.txt
+++ b/include/BLIB/Render/Lighting/CMakeLists.txt
@@ -5,8 +5,10 @@ target_sources(BLIB PUBLIC
     Light2D.hpp
     Light3D.hpp
     PointLight3D.hpp
+    PointLight3DShadow.hpp
     Scene2DLighting.hpp
     Scene3DLighting.hpp
     SpotLight3D.hpp
+    SpotLight3DShadow.hpp
     SunLight3D.hpp
 )
