Begin working on shadow map task itself. Refactor BatchedScene to respect MaterialPipeline RenderPhase pipelines

--- a/src/Render/Shaders/CMakeLists.txt
+++ b/src/Render/Shaders/CMakeLists.txt
@@ -20,6 +20,7 @@ compile_shaders(
     3D/skybox.frag
 
     3D/shadowMap.vert
+    3D/shadowMap.frag
     3D/pointShadowMap.vert
     3D/pointShadowMap.geom
 
