--- a/src/Render/Descriptors/CMakeLists.txt
+++ b/src/Render/Descriptors/CMakeLists.txt
@@ -1,9 +1,9 @@
 target_sources(BLIB PRIVATE
-	DescriptorComponentStorageCache.cpp
 	DescriptorSetFactoryCache.cpp
 	DescriptorSetInstance.cpp
 	DescriptorSetInstanceCache.cpp
 	SceneDescriptorSetInstance.cpp
+	ShaderInputStore.cpp
 )
 
 add_subdirectory(Builtin)
