--- a/include/BLIB/Engine/CMakeLists.txt
+++ b/include/BLIB/Engine/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PUBLIC
     Engine.hpp
     Flags.hpp
     FrameStage.hpp
+    HeaderHelpers.hpp
     Player.hpp
     Properties.hpp
     Property.hpp
