Get shadow map creation mostly working. Issues with depth clipping

--- a/include/BLIB/Render/Descriptors/Builtin/CMakeLists.txt
+++ b/include/BLIB/Render/Descriptors/Builtin/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
     ColorAttachmentFactory.hpp
 	ColorAttachmentInstance.hpp
     CommonBindings.hpp
+	CommonShaderInputs.hpp
 	GlobalDataFactory.hpp
 	GlobalDataInstance.hpp
 	Object2DFactory.hpp
