--- a/include/BLIB/Render/Descriptors/CMakeLists.txt
+++ b/include/BLIB/Render/Descriptors/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(BLIB PUBLIC
+	BufferShaderInput.hpp
 	DescriptorSetFactory.hpp
 	DescriptorSetFactoryCache.hpp
 	DescriptorSetInstance.hpp
