--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -19,6 +19,7 @@ target_sources(BLIB PUBLIC
     RenderPassParameters.hpp
     RenderTexture.hpp
     Sampler.hpp
+    ShaderParameters.hpp
     SharedCommandBuffer.hpp
     SharedCommandPool.hpp
     StandardAttachmentSet.hpp
