--- a/include/BLIB/Render/Graph/Tasks/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Tasks/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
 	FadeEffectTask.hpp
 	ForwardRenderOpaqueTask.hpp
 	ForwardRenderTransparentTask.hpp
+	Outline3DTask.hpp
 	PostProcess3DTask.hpp
 	RenderOverlayTask.hpp
 	ShadowMapTask.hpp
