Stub out everything required for deferred shading

--- a/include/BLIB/Render/Graph/Providers/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Providers/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PUBLIC
 	BloomProviders.hpp
+	GBufferProviders.hpp
 	GenericTargetProvider.hpp
 	MultiAssetProvider.hpp
 	SimpleAssetProvider.hpp
