--- a/include/BLIB/Render/Graph/Strategies/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Strategies/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PUBLIC
 	OverlayRenderStrategy.hpp
 	Scene2DRenderStrategy.hpp
+	Scene3DDeferredRenderStrategy.hpp
 	Scene3DForwardRenderStrategy.hpp
 )
