--- a/src/Render/Graph/Strategies/CMakeLists.txt
+++ b/src/Render/Graph/Strategies/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PRIVATE
 	OverlayRenderStrategy.cpp
 	Scene2DRenderStrategy.cpp
+	Scene3DDeferredRenderStrategy.cpp
 	Scene3DForwardRenderStrategy.cpp
 )
