Refactor renderer to use shared depth buffers for render targets. Impl more of deferred rendering. All untested

--- a/include/BLIB/Render/Graph/Assets/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Assets/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(BLIB PUBLIC
 	BloomAssets.hpp
+	DepthAttachmentType.hpp
+	DepthBuffer.hpp
 	FinalRenderTextureAsset.hpp
 	FinalSwapframeAsset.hpp
 	FramebufferAsset.hpp
