--- a/src/Render/Descriptors/CMakeLists.txt
+++ b/src/Render/Descriptors/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PRIVATE
 	DescriptorSetInstance.cpp
 	DescriptorSetInstanceCache.cpp
 	SceneDescriptorSetInstance.cpp
+	SetWriteHelper.cpp
 	ShaderInputStore.cpp
 )
 
