WIP: msaa. Merge all attachment sets and remove special cased StandardAttachment set and target

--- a/src/Render/Vulkan/CMakeLists.txt
+++ b/src/Render/Vulkan/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(BLIB PRIVATE
+    AttachmentImageSet.cpp
+    AttachmentSet.cpp
     BlendParameters.cpp
     Buffer.cpp
     CleanupManager.cpp
