Move image create params into dedicated struct

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(BLIB PUBLIC
     DescriptorSet.hpp
     Framebuffer.hpp
     Image.hpp
+    ImageOptions.hpp
     PerFrame.hpp
     PerSwapFrame.hpp
     Pipeline.hpp
