Add mipmap support and generation to the texture system

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -27,5 +27,6 @@ target_sources(BLIB PUBLIC
     Swapchain.hpp
     Texture.hpp
     TextureFormat.hpp
+    TextureOptions.hpp
     VulkanState.hpp
 )
