Move sampler cache to renderer. Create SamplerOptions and Sampler structs. Lazy create samplers. Add mipmap support to samplers

--- a/include/BLIB/Render/Resources/CMakeLists.txt
+++ b/include/BLIB/Render/Resources/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(BLIB PUBLIC
     PipelineCache.hpp
     PipelineLayoutCache.hpp
     RenderPassCache.hpp
+    SamplerCache.hpp
     ScenePool.hpp
     SceneRef.hpp
     ShaderModuleCache.hpp
