--- a/include/BLIB/Render/Graph/Assets/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/Assets/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(BLIB PUBLIC
 	RenderPassBehavior.hpp
 	SceneAsset.hpp
 	ShadowMapAsset.hpp
+	SSAOAsset.hpp
 	StandardTargetAsset.hpp
 	TargetSize.hpp
 )
