Implement more of signals module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(Render)
 add_subdirectory(Resources)
 add_subdirectory(Scripts)
 add_subdirectory(Serialization)
+add_subdirectory(Signals)
 add_subdirectory(Systems)
 add_subdirectory(Tilemap)
 add_subdirectory(Util)
