Implement the rest of the signals module

--- a/include/BLIB/Signals/CMakeLists.txt
+++ b/include/BLIB/Signals/CMakeLists.txt
@@ -1,7 +1,11 @@
 target_sources(BLIB PUBLIC
     Channel.hpp
+    Collector.hpp
     Emitter.hpp
     Handler.hpp
     Listener.hpp
     Stream.hpp
+    Table.hpp
 )
+
+add_subdirectory(Priv)
