--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,13 +25,13 @@ add_subdirectory(Components)
 add_subdirectory(Containers)
 add_subdirectory(ECS)
 add_subdirectory(Engine)
-add_subdirectory(Events)
 add_subdirectory(Math)
 add_subdirectory(Parser)
 add_subdirectory(Render)
 add_subdirectory(Resources)
 add_subdirectory(Scripts)
 add_subdirectory(Serialization)
+add_subdirectory(Signals)
 add_subdirectory(Util)
 
 target_include_directories(BLIB.t PRIVATE ${PROJECT_SOURCE_DIR}/src)
