Add purpose to graph asset and use to disambiguate ssao assets

--- a/include/BLIB/Render/Graph/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(BLIB PUBLIC
 	GraphAsset.hpp
 	GraphAssetPool.hpp
 	MultiAsset.hpp
+	Purpose.hpp
 	RenderGraph.hpp
 	Task.hpp
 	TaskAssets.hpp
