Make texture format dynamic to remove separate handling of HDR

--- a/include/BLIB/Render/Events/CMakeLists.txt
+++ b/include/BLIB/Render/Events/CMakeLists.txt
@@ -1,6 +1,8 @@
 target_sources(BLIB PUBLIC
 	GraphEvents.hpp
+	RenderPassInvalidated.hpp
 	SceneDestroyed.hpp
 	SceneObjectRemoved.hpp
 	SettingsChanged.hpp
+	TextureFormatChanged.hpp
 )
