RE-create shadow maps on setting change

--- a/include/BLIB/Render/Events/CMakeLists.txt
+++ b/include/BLIB/Render/Events/CMakeLists.txt
@@ -4,5 +4,6 @@ target_sources(BLIB PUBLIC
 	SceneDestroyed.hpp
 	SceneObjectRemoved.hpp
 	SettingsChanged.hpp
+	ShadowMapsInvalidated.hpp
 	TextureFormatChanged.hpp
 )
