Add support for compute pipelines

--- a/include/BLIB/Render/Vulkan/CMakeLists.txt
+++ b/include/BLIB/Render/Vulkan/CMakeLists.txt
@@ -4,6 +4,8 @@ target_sources(BLIB PUBLIC
     BlendParameters.hpp
     Buffer.hpp
     CommonTextureFormats.hpp
+    ComputePipeline.hpp
+    ComputePipelineParameters.hpp
     CleanupManager.hpp
     DedicatedCommandBuffers.hpp
     DescriptorPool.hpp
