--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(Materials)
 add_subdirectory(Primitives)
 add_subdirectory(Resources)
 add_subdirectory(Scenes)
+add_subdirectory(ShaderResources)
 add_subdirectory(Shaders)
 add_subdirectory(Transfers)
 add_subdirectory(Vulkan)
