--- a/src/Render/Descriptors/CMakeLists.txt
+++ b/src/Render/Descriptors/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PRIVATE
 	DescriptorSetFactoryCache.cpp
 	DescriptorSetInstance.cpp
 	DescriptorSetInstanceCache.cpp
+	InstanceTable.cpp
 	SceneDescriptorSetInstance.cpp
 	SetWriteHelper.cpp
 )
