More refactor work. Get overlay camera working

--- a/include/BLIB/Render/Descriptors/CMakeLists.txt
+++ b/include/BLIB/Render/Descriptors/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(BLIB PUBLIC
 	DescriptorSetInstanceCache.hpp
 	GenericDescriptorSetFactory.hpp
 	GenericDescriptorSetInstance.hpp
+	InitContext.hpp
 	InstanceTable.hpp
 	SetWriteHelper.hpp
 )
