Migrate GlobalUniformBuffer binding to shader resources and update SSAO impl to use it

--- a/include/BLIB/Render/Descriptors/Generic/CMakeLists.txt
+++ b/include/BLIB/Render/Descriptors/Generic/CMakeLists.txt
@@ -2,7 +2,7 @@ target_sources(BLIB PUBLIC
 	AssetBufferBinding.hpp
 	Binding.hpp
 	Bindings.hpp
+	BufferBinding.hpp
 	GlobalStorageBuffer.hpp
-	GlobalUniformBuffer.hpp
 	ObjectBufferBinding.hpp
 )
