Implement double buffered staged buffer. Add auto descriptor update to buffer binding. Get full build working

--- a/include/BLIB/Render/Buffers/CMakeLists.txt
+++ b/include/BLIB/Render/Buffers/CMakeLists.txt
@@ -4,10 +4,10 @@ target_sources(BLIB PUBLIC
 	BatchIndexBuffer.hpp
 	BufferDoubleHostVisibleSourced.hpp
 	BufferDoubleHostVisible.hpp
+	BufferDoubleStaged.hpp
 	IndexBuffer.hpp
 	StaticSSBO.hpp
 	StaticUniformBuffer.hpp
-	UniformBuffer.hpp
 	VertexBuffer.hpp
 )
 
