--- a/include/BLIB/Render/Buffers/Interfaces/CMakeLists.txt
+++ b/include/BLIB/Render/Buffers/Interfaces/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(BLIB PUBLIC
 	BindableBuffer.hpp
 	BindableBufferDouble.hpp
 	BindableBufferDoubleSourced.hpp
+	BindableBufferDoubleStaged.hpp
 )
