--- a/src/Render/Graph/CMakeLists.txt
+++ b/src/Render/Graph/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PRIVATE
 	Asset.cpp
 	AssetFactory.cpp
 	AssetPool.cpp
+	InitContext.cpp
 	GraphAssetPool.cpp
 	RenderGraph.cpp
 	Task.cpp
