Move depth buffer to shader resources

--- a/src/Render/ShaderResources/CMakeLists.txt
+++ b/src/Render/ShaderResources/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PRIVATE
     CameraBufferShaderResource.cpp
+    DepthBufferShaderResource.cpp
     ShaderResourceStore.cpp
     ShadowMapShaderResource.cpp
     SSAOBufferShaderResource.cpp
