Implement top level object class for skeletal models

--- a/include/BLIB/Graphics/CMakeLists.txt
+++ b/include/BLIB/Graphics/CMakeLists.txt
@@ -17,6 +17,8 @@ target_sources(BLIB PUBLIC
 	Drawable.hpp
 	Dummy2D.hpp
 	Icon.hpp
+	ModelStatic.hpp
+	ModelSkeletal.hpp
 	Rectangle.hpp
 	Skybox.hpp
 	Slideshow.hpp
